overflow x bug fixed.3

--- a/frontend/my-app/src/components/navbar/navBar.css
+++ b/frontend/my-app/src/components/navbar/navBar.css
@@ -9,6 +9,9 @@
     z-index: 4;
 }
 
+.drawer-left {
+    overflow-x: hidden !important;
+}
 .navbar-left {
     display: flex;
     justify-content: center;
